fix whitespace bounce

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -15,6 +15,7 @@ html {
     font-family: lato !important;
     -ms-text-size-adjust: 100%;
     -webkit-text-size-adjust: 100%;
+    overscroll-behavior-x: none;
 }
 
 body {
